--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,7 +16,7 @@
         crossorigin="anonymous"></script>
     <!-- Aquí copié link de CDN de Boostrap para íconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"> 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
