--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -69,7 +69,7 @@
                     <div class="containerservicios">
                         <div class="card">
                             <figure>
-                                <img src="/img/Trabajador.jpg" alt="imagentrabajador">
+                                <img src="../img/Trabajador.webp" alt="imagentrabajador">
                             </figure>
                             <div class="contenido">
                                 <h3>Derecho Del Trabajador</h3>
@@ -79,7 +79,7 @@
                         </div>
                         <div class="card">
                             <figure>
-                                <img src="/img/Familia.jpg" alt="imagenfamilia">
+                                <img src="../img/Familia.webp" alt="imagenfamilia">
                             </figure>
                             <div class="contenido">
                                 <h3>Declaratoria de herederos y sucesiones</h3>
@@ -89,7 +89,7 @@
                         </div>
                         <div class="card">
                             <figure>
-                                <img src="/img/Impuestos.jpg" alt="imagenimpuestos">
+                                <img src="../img/Impuestos.webp" alt="imagenimpuestos">
                             </figure>
                             <div class="contenido">
                                 <h3>Derecho fiscal</h3>
