--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -89,7 +89,7 @@
                         </div>
                         <div class="card">
                             <figure>
-                                <img src="../img/Impuestos.jpg" alt="imagenimpuestos">
+                                <img src="../img/Impuestos.webp" alt="imagenimpuestos">
                             </figure>
                             <div class="contenido">
                                 <h3>Derecho fiscal</h3>
