--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -74,7 +74,7 @@
                             <div class="contenido">
                                 <h3>Derecho Del Trabajador</h3>
                                 <p>Representamos tus derechos en casos de despidos, diferencia de haberes, encuadramiento de convenios colectivos, accidentes de trabajo y enfermedades profesionales.</p>
-                                <a href="#">Leer más</a>
+                                <a href="#laboral-extendido">Leer más</a>
                             </div>
                         </div>
                         <div class="card">
@@ -84,7 +84,7 @@
                             <div class="contenido">
                                 <h3>Declaratoria de herederos y sucesiones</h3>
                                 <p>Te guiamos en el proceso de sucesiones, desde la declaratoria de herederos hasta la distribución de bienes, para asegurar que se cumplan los deseos de tus seres queridos.</p>
-                                <a href="#">Leer más</a>
+                                <a href="#familia-extendido">Leer más</a>
                             </div>
                         </div>
                         <div class="card">
@@ -94,14 +94,14 @@
                             <div class="contenido">
                                 <h3>Derecho fiscal</h3>
                                 <p>Manejamos disputas fiscales con municipios y provincias para ayudarte a resolver deudas relacionadas con impuestos de manera eficiente y legal.</p>
-                                <a href="#">Leer más</a>
+                                <a href="#fiscal-extendido">Leer más</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <hr>
                 <div class="cont-laboral">
-                    <h5>Defendiendo tus Derechos Laborales</h5>
+                    <h5 id="laboral-extendido">Defendiendo tus Derechos Laborales</h5>
                     <img class="laboralmas" src="../img/DlaboralMas.jpg" alt="ImagenLaboral">
                         <p>Nos enorgullece ser defensores apasionados de tus derechos laborales. Sabemos que el trabajo es una parte fundamental de la vida, y cuando surgen conflictos laborales, estamos aquí para protegerte.</p>
                         <p>Nuestro equipo de abogados especializados en Derecho Laboral tiene una profunda comprensión de las complejidades de las relaciones laborales. Ya sea que enfrentes un despido injusto, una diferencia de haberes, o un conflicto relacionado con tu convenio colectivo, estamos preparados para luchar en tu nombre.</p>
@@ -109,7 +109,7 @@
                 </div>
                 <hr>    
                 <div class="cont-sucesiones">
-                    <h5>Declaratoria de herederos y sucesiones</h5>
+                    <h5 id="familia-extendido">Declaratoria de herederos y sucesiones</h5>
                     <img class="familymas" src="../img/familyMas.jpg" alt="">
                         <p>Entendemos la importancia de garantizar un futuro tranquilo para ti y tus seres queridos. Nuestra experiencia en Declaratoria de Herederos y Sucesiones te brinda la tranquilidad de saber que tus deseos y patrimonio están en manos expertas.</p>
                         <p>Imagina que has perdido a un ser querido y te enfrentas al desafío de administrar su patrimonio. Este proceso puede ser abrumador y legalmente complicado. En nuestro Estudio, nos reuniríamos contigo para entender tus necesidades y objetivos. Luego, trabajamos diligentemente para facilitar la Declaratoria de Herederos y la sucesión, asegurando que se respeten las voluntades del difunto y que se distribuyan los bienes de manera justa y eficiente.</p>
@@ -117,7 +117,7 @@
                 </div>
                 <hr>    
                 <div class="cont-fiscal">
-                    <h5>Derecho fiscal - Tributario</h5>
+                    <h5 id="fiscal-extendido">Derecho fiscal - Tributario</h5>
                     <img class="impuestosmas" src="../img/ImpuestosMas (1).jpg" alt="">
                         <p>Sabemos que las deudas fiscales y las multas pueden ser preocupantes y desafiantes. Nuestra experiencia en Derecho Fiscal nos permite brindarte el asesoramiento necesario para abordar deudas de impuestos municipales, provinciales y multas de tráfico de manera efectiva y legal.</p>
                         <p>Imagina que has recibido una notificación de una deuda de impuestos municipales que no esperabas o una multa por estacionar en un lugar prohibido. Estas situaciones pueden generar estrés financiero y preocupación. Estamos aquí para ayudarte. Nuestros expertos en Derecho Fiscal te asesorarán sobre cómo resolver estas cuestiones de manera eficiente y legal. Ya sea a través de un plan de pago, una apelación o negociaciones con las autoridades fiscales, trabajamos incansablemente para proteger tus intereses financieros.</p>
