--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -89,7 +89,7 @@
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="./nosotros.html">Nosotros</a></li>
                     <li><a href="./servicios.html">Servicios</a></li>
-                    <li><a href="./nosotros.html">Noticias</a></li>
+                    <li><a href="./noticias.html">Noticias</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
