--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -66,7 +66,7 @@
                     <h3>Aumentó el Salario mínimo vital y móvil</h3>
                 </div>              
                 <div class="not-caja3">
-                    <img class="img-not-caja3" src="/img/Salario.jpg" alt="Salario">
+                    <img class="img-not-caja3" src="../img/Salario.webp" alt="Salario">
                 </div>
                 <div class="not-caja4">
                     <p class="p-not-caja4">El Gobierno confirmó el aumento del 34% del Salario Mínimo, Vital y Móvil (SMVM). De esta manera, partir de julio, pasará a ser $ 105.500, $112.500 en agosto y a $118.000 en septiembre.La medida fue comunicada por el Ministerio de Trabajo, Empleo y Seguridad Social tras la reunión del Consejo del Salario celebrada el jueves con representantes de la Confederación General del Trabajo (CGT), Central de Trabajadores de la Argentina (CTA), Central de Trabajadores de la Argentina Autónoma (CTAA) y empresarios. A través del artículo 1°, el Ministerio de Trabajo convocó a un nuevo plenario del Consejo del Salario a sesionar el próximo miércoles 27 de septiembre desde las 16 horas y bajo modalidad virtual. </p>
