--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <main>
         <section class="bg-image tituloyparrafo">
             <h2 class="h2main">
-                Benvenutti a Estudio Jurídico LC
+                Bienvenidos a Estudio Jurídico LC
             </h2>
             </div>
             <p>En LC Soluciones jurídicas, entendemos que la vida está llena de desafíos legales que pueden surgir en
