--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
     <header>
 
-        <!-- <img src="/img/Logo Miguel.png" alt="logo"> -->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
+                <!-- <img src="./img/Logo Miguel278.webp " alt="logo"> -->
                 <a class="navbar-brand" href="#">LC Soluciones Jurídicas</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -94,6 +94,9 @@
                     <li><a href="./pages/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
+        </div>
+        <div>
+            <img class="logo-lc" src="./img/Logo Miguel278.webp" alt="logo-footer">
         </div>
         <div class="icons-copyright">
             <div class="icons">
