--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pre-entrega</title>
+    <meta name="description" content="Equipo de abogados expertos en conflictos laborales, familiares y más. Consulta a LC Soluciones Jurídicas para representación legal confiable y exitosa.">
+    <meta name="keywords"  content="abogados, Córdoba, conflictos, laborales, familiares, representación, exitosa, Legal">
+    <title>Estudio Jurídico en Córdoba - Home</title>
     <link rel="shortcut icon" href="img/IconoJus.png">
     <!-- Link de Boostrap para el header todos aquí -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
