--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <meta name="description" content="Necesitas asistencia legal? Contáctanos para programar una consulta y descubrir cómo LC Soluciones Jurídicas puede ayudarte a resolver tus problemas legales. Tu satisfacción es nuestra prioridad.">
+    <meta name="keywords"  content="abogados, Córdoba, conflictos, laborales, familiares, representación, exitosa, Legal">
+    <title>Estudio Jurídico en Córdoba - Contacto</title>
     <link rel="shortcut icon" href="../img/IconoJus.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
