--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
+    <meta name="description" content="Conoce a nuestro equipo de abogados altamente calificados. Descubre cómo LC Soluciones Jurídicas te proporciona asesoramiento legal confiable y representación experta en una amplia gama de áreas legales.">
+    <meta name="keywords"  content="abogados, Córdoba, conflictos, laborales, familiares, representación, exitosa, Legal">
+    <title>Estudio Jurídico en Córdoba - Nosotros</title>
     <link rel="shortcut icon" href="../img/IconoJus.png">
     <!-- Link de Boostrap para el header todos aquí -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
