--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -3,7 +3,9 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noticias</title>
+    <meta name="description" content="Mantente al día con nuestras últimas noticias y novedades legales. Encuentra información útil sobre cambios en la ley, casos relevantes y consejos legales.">
+    <meta name="keywords"  content="abogados, Córdoba, conflictos, laborales, familiares, representación, exitosa, Legal">
+    <title>Estudio Jurídico en Córdoba - Noticias</title>
     <link rel="shortcut icon" href="../img/IconoJus.png">
     <!-- Link de Boostrap para el header todos aquí -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
