--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pre-entrega</title>
+    <meta name="description" content="Descubre nuestros servicios legales. Desde derecho del trabajo hasta sucesiones y derecho fiscal, estamos aquí para ayudarte a resolver tus problemas legales de manera eficiente y legal.">
+    <meta name="keywords"  content="abogados, Córdoba, conflictos, laborales, familiares, representación, exitosa, Legal">
+    <title>Estudio Jurídico en Córdoba - Servicios</title>
     <link rel="shortcut icon" href="img/IconoJus.png">
     <!-- Link de Boostrap para el header todos aquí -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -114,7 +116,7 @@
                     <img class="familymas" src="../img/familyMas.jpg" alt="">
                         <p>Entendemos la importancia de garantizar un futuro tranquilo para ti y tus seres queridos. Nuestra experiencia en Declaratoria de Herederos y Sucesiones te brinda la tranquilidad de saber que tus deseos y patrimonio están en manos expertas.</p>
                         <p>Imagina que has perdido a un ser querido y te enfrentas al desafío de administrar su patrimonio. Este proceso puede ser abrumador y legalmente complicado. En nuestro Estudio, nos reuniríamos contigo para entender tus necesidades y objetivos. Luego, trabajamos diligentemente para facilitar la Declaratoria de Herederos y la sucesión, asegurando que se respeten las voluntades del difunto y que se distribuyan los bienes de manera justa y eficiente.</p>
-                        <p>Nuestra dedicación a estas cuestiones legales complejas es una extensión de nuestro compromiso con el bienestar de nuestros clientes. En [Nombre del Estudio], te brindamos la orientación legal necesaria para enfrentar estos momentos difíciles con confianza y claridad.</p>
+                        <p>Nuestra dedicación a estas cuestiones legales complejas es una extensión de nuestro compromiso con el bienestar de nuestros clientes. En LC Soluciones Jurídicas, te brindamos la orientación legal necesaria para enfrentar estos momentos difíciles con confianza y claridad.</p>
                 </div>
                 <hr>    
                 <div class="cont-fiscal">
