--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                 </ul>
             </nav>
         </div>
-        <div>
-            <img class="logo-lc" src="./img/Logo Miguel278.webp" alt="logo-footer">
+        <div class="caja-logo-footer">
+            <img class="logo-lc" src="./img/Logo LCcuadrado.webp" alt="logo-footer">
         </div>
         <div class="icons-copyright">
             <div class="icons">
