--- a/index.html
+++ b/index.html
@@ -102,9 +102,15 @@
         </div>
         <div class="icons-copyright">
             <div class="icons">
-                <i class="bi bi-envelope-at"></i>
-                <i class="bi bi-whatsapp"></i>
-                <i class="bi bi-instagram"></i>
+                <a href="#">
+                    <i class="bi bi-envelope-at"></i>
+                </a>
+                <a href="https://l.instagram.com/?u=https%3A%2F%2Fwa.me%2F543513525169&e=AT3uAHU1UL5GX6WGLIZjRAT6AJz2q8Z_z72Vwu30lNPNHEyoSyGou6uu_wn7O3oJvhLBoFIrhLkANkmhDzSno18lVmfi0PeIZ1IfCP0">
+                    <i class="bi bi-whatsapp"></i>
+                </a>
+                <a href="https://www.instagram.com/estudioslc/">
+                    <i class="bi bi-instagram"></i>
+                </a>
                 <i class="bi bi-twitter-x"></i>
             </div>
             <p class="copyright">2023 LC Soluciones jurídicas. Todos los derechos reservados.</p>    
