--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <a href="#">
                     <i class="bi bi-envelope-at"></i>
                 </a>
-                <a href="https://l.instagram.com/?u=https%3A%2F%2Fwa.me%2F543513525169&e=AT3uAHU1UL5GX6WGLIZjRAT6AJz2q8Z_z72Vwu30lNPNHEyoSyGou6uu_wn7O3oJvhLBoFIrhLkANkmhDzSno18lVmfi0PeIZ1IfCP0">
+                <a href="https://wa.me/543513525169">
                     <i class="bi bi-whatsapp"></i>
                 </a>
                 <a href="https://www.instagram.com/estudioslc/">
