--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <!-- <img src="./img/Logo Miguel278.webp " alt="logo"> -->
+                <img class="logo-LC-header" src="./img/Logo Miguel278.webp " alt="logo">
                 <a class="navbar-brand" href="#">LC Soluciones Jurídicas</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -102,7 +102,7 @@
         </div>
         <div class="icons-copyright">
             <div class="icons">
-                <a href="#">
+                <a href="./pages/contacto.html">
                     <i class="bi bi-envelope-at"></i>
                 </a>
                 <a href="https://wa.me/543513525169">
@@ -111,7 +111,9 @@
                 <a href="https://www.instagram.com/estudioslc/">
                     <i class="bi bi-instagram"></i>
                 </a>
-                <i class="bi bi-twitter-x"></i>
+                <a href="https://twitter.com/Miguel_LCL">
+                    <i class="bi bi-twitter-x"></i>
+                </a>
             </div>
             <p class="copyright">2023 LC Soluciones jurídicas. Todos los derechos reservados.</p>    
         </div>     
