--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,6 +27,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
+                <img class="logo-LC-header" src="../img/Logo Miguel278.webp " alt="logo">
                 <a class="navbar-brand" href="#">LC Soluciones Jurídicas</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -62,16 +63,19 @@
 
     <!--Main-->
 
-    <main>
+    <main class="fondocontacto">
         <div class="titulocontacto">
             <h2> Comuncate con nosotros!</h2>
         </div>
         <div class="pcontacto">
             <p>Comentanos tu consulta a través de nuestras vías de contacto</p>
         </div>
+        <div class="contenedor-img-contacto">
+            <img class="img-contacto" src="../img/imagen-contactando.webp" alt="imagen-contactando">
+        </div>
         <section class="container">
             <div class="row d-flex justify-content-center">
-                <div class="col-6">
+                <form class="col-6">
                     <div class="mb-3">
                         <label for="exampleFormControlInput1" class="form-label">Nombre y apellido</label>
                         <input type="name" class="form-control" id="exampleFormControlInput1"
@@ -91,7 +95,8 @@
                         <label for="exampleFormControlTextarea1" class="form-label">Escriba aquí su consulta</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
-                </div>
+                    <button type="submit">Enviar</button>
+                </form>
                 
         </section>
     </main>
@@ -105,20 +110,34 @@
             <h4>LC Soluciones Jurídicas</h4>
             <nav class="footer-menu">
                 <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="./nosotros.html">Nosotros</a></li>
-                    <li><a href="./servicios.html">Servicios</a></li>
-                    <li><a href="./nosotros.html">Noticias</a></li>
-                    <li><a href="./contacto.html">Contacto</a></li>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="./pages/nosotros.html">Nosotros</a></li>
+                    <li><a href="./pages/servicios.html">Servicios</a></li>
+                    <li><a href="./pages/noticias.html">Noticias</a></li>
+                    <li><a href="./pages/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
+        <div class="caja-logo-footer">
+            <img class="logo-lc" src="../img/Logo LCcuadrado.webp" alt="logo-footer">
+        </div>
+        <div class="caja-logo-footer">
+            <img class="logo-lc" src="./img/Logo LCcuadrado.webp" alt="logo-footer">
+        </div>
         <div class="icons-copyright">
             <div class="icons">
-                <i class="bi bi-envelope-at"></i>
-                <i class="bi bi-whatsapp"></i>
-                <i class="bi bi-instagram"></i>
-                <i class="bi bi-twitter-x"></i>
+                <a href="./pages/contacto.html">
+                    <i class="bi bi-envelope-at"></i>
+                </a>
+                <a href="https://wa.me/543513525169">
+                    <i class="bi bi-whatsapp"></i>
+                </a>
+                <a href="https://www.instagram.com/estudioslc/">
+                    <i class="bi bi-instagram"></i>
+                </a>
+                <a href="https://twitter.com/Miguel_LCL">
+                    <i class="bi bi-twitter-x"></i>
+                </a>
             </div>
             <p class="copyright">2023 LC Soluciones jurídicas. Todos los derechos reservados.</p>    
         </div>     
