--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -25,6 +25,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
+                <img class="logo-LC-header" src="../img/Logo Miguel278.webp " alt="logo">
                 <a class="navbar-brand" href="#">LC Soluciones Jurídicas</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -50,7 +51,7 @@
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
                 </div>
@@ -95,6 +96,9 @@
                     <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
+        </div>
+        <div class="caja-logo-footer">
+            <img class="logo-lc" src="../img/Logo LCcuadrado.webp" alt="logo-footer">
         </div>
         <div class="icons-copyright">
             <div class="icons">
