--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -26,6 +26,7 @@
         <header>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
+                    <img class="logo-LC-header" src="../img/Logo Miguel278.webp " alt="logo">
                     <a class="navbar-brand" href="#">LC Soluciones Jurídicas</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -146,6 +147,9 @@
                         <li><a href="./contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
+            </div>
+            <div class="caja-logo-footer">
+                <img class="logo-lc" src="../img/Logo LCcuadrado.webp" alt="logo-footer">
             </div>
             <div class="icons-copyright">
                 <div class="icons">
