--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,7 +53,7 @@
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
+                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Buscar</button>
                     </form>
                 </div>
@@ -120,9 +120,6 @@
         </div>
         <div class="caja-logo-footer">
             <img class="logo-lc" src="../img/Logo LCcuadrado.webp" alt="logo-footer">
-        </div>
-        <div class="caja-logo-footer">
-            <img class="logo-lc" src="./img/Logo LCcuadrado.webp" alt="logo-footer">
         </div>
         <div class="icons-copyright">
             <div class="icons">
