--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -102,10 +102,18 @@
         </div>
         <div class="icons-copyright">
             <div class="icons">
-                <i class="bi bi-envelope-at"></i>
-                <i class="bi bi-whatsapp"></i>
-                <i class="bi bi-instagram"></i>
-                <i class="bi bi-twitter-x"></i>
+                <a href="./pages/contacto.html">
+                    <i class="bi bi-envelope-at"></i>
+                </a>
+                <a href="https://wa.me/543513525169">
+                    <i class="bi bi-whatsapp"></i>
+                </a>
+                <a href="https://www.instagram.com/estudioslc/">
+                    <i class="bi bi-instagram"></i>
+                </a>
+                <a href="https://twitter.com/Miguel_LCL">
+                    <i class="bi bi-twitter-x"></i>
+                </a>
             </div>
             <p class="copyright">2023 LC Soluciones jurídicas. Todos los derechos reservados.</p>    
         </div>     
