--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -102,7 +102,7 @@
         </div>
         <div class="icons-copyright">
             <div class="icons">
-                <a href="./pages/contacto.html">
+                <a href="./contacto.html">
                     <i class="bi bi-envelope-at"></i>
                 </a>
                 <a href="https://wa.me/543513525169">
