--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -153,7 +153,7 @@
             </div>
             <div class="icons-copyright">
                 <div class="icons">
-                    <a href="./pages/contacto.html">
+                    <a href="./contacto.html">
                         <i class="bi bi-envelope-at"></i>
                     </a>
                     <a href="https://wa.me/543513525169">
