--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -110,11 +110,11 @@
             <h4>LC Soluciones Jurídicas</h4>
             <nav class="footer-menu">
                 <ul>
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./pages/nosotros.html">Nosotros</a></li>
-                    <li><a href="./pages/servicios.html">Servicios</a></li>
-                    <li><a href="./pages/noticias.html">Noticias</a></li>
-                    <li><a href="./pages/contacto.html">Contacto</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="./nosotros.html">Nosotros</a></li>
+                    <li><a href="./servicios.html">Servicios</a></li>
+                    <li><a href="./noticias.html">Noticias</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
